Change font size of text on animal tales to prevent stretching in the case of animals with long names and low width/height ratios

--- a/zukan_workspace/sass/main.scss
+++ b/zukan_workspace/sass/main.scss
@@ -132,6 +132,7 @@ footer {
   border-width: 2px;
   display: inline-block;
   margin: .5vw;
+  font-size: .85em;
   img {
     max-height: 112px;
     max-width: 100%;
